# orca123d

./: .gitignore  LICENSE  README.md  basic.3mf  fuzzy_skin_paint.3mf  mise.toml  orca-slicer.appimage  pyproject.toml  seam_paint.3mf  texture.3mf  variable_layer_height.3mf
.github/workflows/: publish.yml
examples/: basic.py  fuzzy_skin_paint.py  print_layout.py  project_info.py  seam_paint.py  texture.py  texture_ocp_vscode.py  variable_layer_height.py
src/orca123d/: __init__.py  coerce.py  layer_heights.py  mesh.py  model_settings.py  model_xml.py  package.py  paint.py  print_settings.py  project.py  project_info.py  texture.py
src/orca123d/_proto/: __init__.py  codegen.py  print.proto
tests/: test_layer_height.py  test_locations.py  test_paint.py  test_project_info.py  test_subtypes.py  test_texture.py
