[project]
name = "orca123d"
version = "0.1.0"
description = "Turn build123d models into OrcaSlicer project (.3mf) files with per-object settings"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "build123d",
    "numpy>=2.4.6",
    "ocp-vscode>=3.4.0",
    "pillow>=12.2.0",
    "pip>=26.1.2",
    "pydantic>=2",
    "pyfqmr>=0.5.0",
    "ruff>=0.15.16",
    "trimesh>=4.12.2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "cadquery-ocp-stubs>=7.9.3.1.1"]
preview = [
    "ocp-vscode>=3.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orca123d"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
indent-width = 2
extend-exclude = ["src/orca123d/print_settings.py"]

[tool.uv.sources]
build123d = { path = "build123d", editable = true }
