[project]
name = "orca123d"
version = "0.1.0"
description = "Turn build123d models into OrcaSlicer project (.3mf) files with per-object settings"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Jasmin Bom", email = "jsmnbom@gmail.com" }]
keywords = ["build123d", "orcaslicer", "3d-printing", "3mf", "cad", "slicer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Manufacturing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]
dependencies = [
    "build123d>=0.11.0",
    "numpy>=2.4.6",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.15.16", "cadquery-ocp-stubs>=7.9.3.1.1"]
preview = ["ocp-vscode>=3.4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orca123d"]

[tool.hatch.build.targets.sdist]
include = ["src/orca123d", "README.md", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
indent-width = 2
extend-exclude = ["src/orca123d/print_settings.py"]
